--- a/style.css
+++ b/style.css
@@ -1,160 +1,332 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'poppins',sans-serif;
+    font-family: 'Red Hat Display', sans-serif;
 }
-body,html{
+html, body {
     overflow-x: hidden;
 }
-header{
+header {
     width: 100%;
-    height: 60px;
+    position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    height: 5rem;
     align-items: center;
-    padding: 30px 60px;
-    border-bottom: 4px solid #e91e63;
 }
-header h1 {
-    color: black;
+header img {
+    width: 2rem;
 }
-.parts{
-    display: flex;
-    gap: 70px;
-}
-.parts a{
-    text-decoration: none;
-    font-size: 20px;
-    text-transform: capitalize;
-    color: black;
-    font-weight: 600;
-}
-.parts a:hover{
-    color: #e91e63;
-}
-.boutton{
-    border-radius: 30px;
-    border: solid 3px #e91e63;
-    cursor: pointer;
-    padding: 6px 15px;
-    font-size: 15px;
-    text-decoration: none;
-    color: #e91e63;
-    font-weight: 600;
-}
-.boutton:hover {
-    color: white;
-    background: #e91e63;
-}
-
-.div2{
+.div1 {
+    height: 90vh;
     width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
-    padding: 30px;
+    background-color: #FAE5EF;
+    display: block;
+    justify-content: center;
     overflow: hidden;
-    background-color: black;
 }
-.div22{
+.div11 {
+    width: 100%;
+    position: relative;
     display: flex;
-    height: 80vh;
+    justify-content: center;
 }
-.div22 img{
-    border-radius: 94px;
+.divimg {
+    position: relative;
 }
-.div23{
-    padding-left: 50px;
-    color: #fff;
-    font-size: 20px;
+.divimg img {
+    width: 750px;
 }
-.div3{
-    height: 105vh;
-    background-color: rgb(0, 0, 0);
+.divimg span {
+    position: absolute;
+    bottom: 10%;
+    left: 40%;
+    transform: translateX(-80%);
+    font-weight: 600;
+    font-size: 2.5em;
 }
-.div31{
-    color: #fff;
+.div111 {
+    display: grid;
+    justify-content: center;
+    margin-top: 10px;
     text-align: center;
 }
-.div31 h1{
-    color: #005E83;
-    padding-top: 10px;
+.div111 .p1 {
+    font-weight: 600;
+    font-size: 3.5em;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
 }
-.txt1{
-    padding-top: 10px;
+.div111 .p11 {
+    width: 100%;
+    font-weight: 700;
+    font-size: 1.5em;
+    margin-top: 20px;
 }
-.txt2{
-    padding-top: 5px;
+.div2{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    background-color: #2f2f2f;
+    overflow: hidden;
 }
-.txt2 a{
-    color: #005E83;
-    font-weight: bold;
+.p2{
+    color: white;
+    font-weight: 600;
+    font-size: 2.5em;
 }
-.div32{
+.p22{
+    font-weight: 600;
+    font-size: 2em;
+    color: #a7a7a7;
+}
+.div21{
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 60%;
-    margin-top: 40px;
-    box-shadow: 10px -10px 100px  #005E83;
-    border-radius: 30px;
+    left: 13%;
+    top: 8%;
 }
-.video{
-    width: 100%;
-    height: 100%;
-    border-radius: 30px;
+.div22{
+    position: absolute;
+    left: 10%;
+    bottom: -15px;
 }
-.services-container{
-    width: 100%;
-    height: 60vh;
-    background-color: black;
+.div22 img {
+    width: 316px;
+}
+.div23{
+    width: 431px;
+    height: 437px;
+    position: absolute;
+    background-color: white;
+    border-radius: 0 90px 0 0;
+    padding-top: 10px;
+    bottom: 10%;
+    right: 10%;
+    transform: translateX(-5%);
+    box-shadow: 20px -20px #EA5148;
+}
+.div23 label{
+    display: grid;
+    position:relative;
+    left:7%;
+    font-weight:600;
+    font-size:1.5em;
+    padding-top: 10px;
+}
+.div23 input,textarea{
+    position: relative;
+    left: 7%;
+    width: 80%;
+    border: none ;
+    border-bottom: solid 2px #2F2F2F;
+    padding:3px;
+    padding-left: 5px;
+}
+.btn1{
+    width: 370px;
+    height: 30px;
+    background-color: #EA5148;
+    border: #EA5148;
+    border-radius: 0 10px 0 0;
+    position: absolute;
+    bottom: 4%;
+    left: 7%;
+    color: white;
+    font-size: 1em;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 80px;
 }
-.services-paln{
-    flex: 1;
-    background-color: #e91e63;
-    border-radius: 15px;
-    max-width: 204px;
-    height: 200px;
-    text-align: center;
-    padding: 10px;
+.btn1 img {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    left: 65%;
 }
-.plan-icon{
-    width: 80px;
-    height: 40px;
-    position: relative;
-    left: 27%;
+.btn2{
+    display: flex;
+    padding: 5px;
+    background-color: #2F2F2F;
+    cursor: pointer;
+    color: white;
+    border: #2F2F2F;
+    align-items: center;
 }
-.plan-title{
-    font-weight: bold;
-    font-size: 20px;
-    padding-top: 50px;
+.btn2 a{
+    color: white;
 }
-.plan-disc{
-    font-size: 15px;
-    color: #fff;
-    padding-top: 10px;
+.txt{
+    height:70px;
+
+}
+@media (max-width : 767px){
+    .div1{
+        height: 80vh;
+    }
+    .divimg img {
+        width: 300px;
+        margin-top: 25%;
+    }
+    .divimg span {
+        font-size: 1em;
+    }
+    .div111 {
+        margin-top: 70px;
+    }
+    .div111 .p1 {
+        font-size: 1.8em;
+    }
+    .div111 .p11 {
+        font-size: 1em;
+    }
+    .p2{
+        font-size: 1.5em;
+    }
+    .p22{
+        font-size: 1.7em;
+    }
+    .div21{
+        position: absolute;
+        left: 13%;
+        top: 8%;
+    }
+    .div22{
+        position: absolute;
+        left: 10%;
+        bottom: -15px;
+    }
+    .div22 img {
+        width: 0px;
+    }
+    .div23{
+        width: 261px;
+        height: 340px;
+        box-shadow: 10px -10px #EA5148;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .div23 label{
+        font-size:0.9em;
+    }
+    .btn1{
+        width: 230px;
+    }
+    .btn1 img {
+        position: absolute;
+        display: flex;
+        align-items: center;
+        left: 65%;
+    }
+    .btn2{
+        display: flex;
+        padding: 5px;
+        background-color: #2F2F2F;
+        cursor: pointer;
+        color: white;
+        border: #2F2F2F;
+        align-items: center;
+    }
+    .btn2 a{
+        color: white;
+    }
+    .txt{
+        height:40px;
+    }
+}
+
+
+@media (min-width : 768px) and (max-width : 1023px){
+    .divimg img {
+        width: 690px;
+    }
+    .divimg span {
+        left: 43%;
+    }
+    .div22 img {
+        width: 0px;
+    }
+    .div23{
+        width: 261px;
+        height: 340px;
+        box-shadow: 10px -10px #EA5148;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .div23 label{
+        font-size:0.9em;
+    }.btn1{
+        width: 230px;
+    }
+    .txt{
+        height:40px;
+    }
+    .p2{
+        font-size: 2em;
+    }
+    .p22{
+        font-size: 2em;
+    }
 }
 
 
 
+/*@media (min-width : 1024px) and (max-width : 1280px){
 
-
-
-
-
-footer{
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    position: relative;
-    bottom: 0;
 }
-footer a{
-    color: #fff;
+*/
+/*@media (min-width : 1281px) and (max-width : 1599px){
 }
+*/
+
+
+
+    @media (min-width : 1600px) {
+        .div1{
+            height: 100vh;
+        }
+        .divimg img {
+            width: 1400px;
+        }
+        .divimg span {
+            font-size: 4.5em;
+        }
+        .div111 .p1 {
+            font-size: 5.5em;
+        }
+        .div111 .p11 {
+            font-size: 2.5em;
+        }
+        .p2{
+            font-size: 3.5em;
+        }
+        .p22{
+            font-size: 2.7em;
+        }
+        .div22{
+            left: 5%;
+            bottom: -20px;
+        }
+        .div22 img {
+            width: 500px;
+        }
+        .div23{
+            width: 561px;
+            height: 640px;
+            box-shadow: 30px -30px #EA5148;
+        }
+        .div23 label{
+            font-size:1.9em;
+        }
+        .btn1{
+            width: 490px;
+        }
+        .btn2 a{
+            color: white;
+        }
+        .txt{
+            height:140px;
+        }
+    }
