--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ footer a:hover{
         display: none;
     }
     .boutton{
-        display: none;
+        padding: 4px 7px;
     }
     .div1{
         height: 80vh;
