--- a/style.css
+++ b/style.css
@@ -332,8 +332,8 @@ footer a:hover{
     }   
     .div22 img{
         border-radius: 54px;
-        width: 250px;
-        height: 400px;
+        width: 300px;
+        height: 420px;
     }
     .div23{
         padding-left: 0;
@@ -344,6 +344,7 @@ footer a:hover{
     }
     .abt2{
         font-size: 0px;
+        display: none;
     }
     .div3{
         height: 80vh;
