--- a/style.css
+++ b/style.css
@@ -329,6 +329,7 @@ footer a:hover{
         height: 100%;
     }.div22{
         height: 70vh;
+        height: 340px;
     }   
     .div22 img{
         border-radius: 54px;
