--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ header h1 {
     left: 10%;
     top: 30%;
 }
+.disc{
+    font-size: 1.4em;
+    margin-top: 20px;
+}
 .div111{
     position: absolute;
     right: -10%;
@@ -386,6 +390,18 @@ footer a:hover{
         width: 290px;
     }
 }
+@media (min-width : 781px) and (max-width : 1023px){
+    .div111{
+        bottom: 0;
+    }
+    .div111 img{
+        width: 500px;
+    }
+    .disc{
+        font-size: 1.1em;
+    }
+}
+
 @media (min-width : 1600px){
     .div111 img{
         width: 1000px;
