--- a/style.css
+++ b/style.css
@@ -391,12 +391,18 @@ footer a:hover{
     }
 }
 @media (min-width : 781px) and (max-width : 1023px){
+    .div11 img{
+        width: 80%;
+    }
     .div111{
         bottom: 0;
-        right: 5%;
+        right: 2%;
     }
     .div111 img{
         width: 280px;
+    }
+    .div3{
+        width: 100%;
     }
     .disc{
         font-size: 1.1em;
