--- a/style.css
+++ b/style.css
@@ -402,11 +402,19 @@ footer a:hover{
         width: 280px;
     }
     .div3{
-        width: 100%;
+        height: 100vh;
     }
     .div31 h1{
-
         padding-top: 0px;
+    }
+    .txt1{
+        padding-top: 0px;
+    }
+    .txt2{
+        padding-top: 0px;
+    }
+    .div32{
+        margin-top: 15px;
     }
     .disc{
         font-size: 1.1em;
