--- a/style.css
+++ b/style.css
@@ -1,434 +1,342 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'poppins',sans-serif;
+    font-family: 'Red Hat Display', sans-serif;
 }
-body,html{
+html, body {
     overflow-x: hidden;
 }
-header{
+header {
     width: 100%;
-    height: 60px;
+    position: relative;
     display: flex;
-    background-color: #fff;
-    z-index: 1;
-    top: 0;
-    justify-content: space-between;
+    justify-content: center;
+    height: 5rem;
     align-items: center;
-    padding: 30px 20px;
-    border-bottom: 4px solid #e91e63;
-    position: fixed;
 }
-header h1 {
-    color: black;
+header img {
+    width: 2rem;
 }
-.parts{
-    display: flex;
-    gap: 20px;
-}
-.parts a{
-    text-decoration: none;
-    font-size: 20px;
-    text-transform: capitalize;
-    color: black;
-    font-weight: 600;
-}
-.parts a:hover{
-    color: #e91e63;
-}
-.boutton{
-    border-radius: 30px;
-    border: solid 3px #e91e63;
-    cursor: pointer;
-    padding: 6px 15px;
-    font-size: 15px;
-    text-decoration: none;
-    color: #e91e63;
-    font-weight: 600;
-}
-.boutton:hover {
-    color: white;
-    background: #e91e63;
-}
-
-
-/*     div 1      */
-
-.div1{
+.div1 {
+    height: 90vh;
     width: 100%;
-    height: 100vh;
-    background-color: #000000;
+    background-color: #FAE5EF;
+    display: block;
+    justify-content: center;
+    overflow: hidden;
+}
+.div11 {
+    width: 100%;
+    position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+}
+.divimg {
     position: relative;
 }
-.div11{
-    color: white;
+.divimg img {
+    width: 750px;
+}
+.divimg span {
     position: absolute;
-    left: 10%;
-    top: 30%;
+    bottom: 10%;
+    left: 40%;
+    transform: translateX(-80%);
+    font-weight: 600;
+    font-size: 2.5em;
 }
-.disc{
-    font-size: 1.4em;
-    margin-top: 20px;
-}
-.div111{
-    position: absolute;
-    right: -10%;
-    transform: translateX(5%);
-}
-
-/*     fin div 1      */
-
-
-
-/*     div 2      */
-.div2{
-    width: 100%;
-    height: 110vh;
-    display: flex;
-    justify-content: space-between;
-    padding: 30px;
-    padding-top: 100px;
-    overflow: hidden;
-    background-color: black;
-}
-.abt1{
-    display: none;
-}
-.div22{
-    display: flex;
-    height: 80vh;
-}
-.div22 img{
-    border-radius: 54px;
-}
-.div23{
-    padding-left: 50px;
-    color: #fff;
-    font-size: 20px;
-}
-/*     fin div 2      */
-
-
-
-
-
-/*     div 3      */
-.div3{
-    height: 110vh;
-    background-color: rgb(0, 0, 0);
-}
-.div31{
-    color: #fff;
+.div111 {
+    display: grid;
+    justify-content: center;
+    margin-top: 10px;
     text-align: center;
 }
-.div31 h1{
-    color: #e91e63;
-    padding-top: 70px;
+.div111 .p1 {
+    font-weight: 600;
+    font-size: 3.5em;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
 }
-.txt1{
+.div111 .p11 {
+    width: 100%;
+    font-weight: 700;
+    font-size: 1.5em;
+    margin-top: 20px;
+}
+.div2{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    background-color: #2f2f2f;
+    overflow: hidden;
+}
+.p2{
+    color: white;
+    font-weight: 600;
+    font-size: 2.5em;
+}
+.p22{
+    font-weight: 600;
+    font-size: 2em;
+    color: #a7a7a7;
+}
+.div21{
+    position: absolute;
+    left: 13%;
+    top: 8%;
+}
+.div22{
+    position: absolute;
+    left: 10%;
+    bottom: -15px;
+}
+.div22 img {
+    width: 316px;
+}
+.div23{
+    width: 431px;
+    height: 437px;
+    position: absolute;
+    background-color: white;
+    border-radius: 0 90px 0 0;
+    padding-top: 10px;
+    bottom: 10%;
+    right: 10%;
+    transform: translateX(-5%);
+    box-shadow: 20px -20px #EA5148;
+}
+.div23 label{
+    display: grid;
+    position:relative;
+    left:7%;
+    font-weight:600;
+    font-size:1.5em;
     padding-top: 10px;
 }
-.txt2{
-    padding-top: 5px;
+.div23 input,textarea{
+    position: relative;
+    left: 7%;
+    width: 80%;
+    border: none ;
+    border-bottom: solid 2px #2F2F2F;
+    padding:3px;
+    padding-left: 5px;
 }
-.txt2 a{
-    color: #e01e63;
-    font-weight: bold;
-}
-.div32{
+.btn1{
+    width: 370px;
+    height: 30px;
+    background-color: #EA5148;
+    border: #EA5148;
+    border-radius: 0 10px 0 0;
     position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 50%;
-    margin-top: 40px;
-    box-shadow: 10px -10px 60px  #e92e63;
-    border-radius: 30px;
-}
-.video{
-    width: 100%;
-    height: 100%;
-    border-radius: 30px;
-}
-/*     fin div 3      */
-
-
-
-/*     div 4      */
-.services-container{
-    width: 100%;
-    height: 60vh;
-    background-color: black;
+    bottom: 4%;
+    left: 7%;
+    color: white;
+    font-size: 1em;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 80px;
 }
-.services-paln{
-    flex: 1;
-    background-color: #e91e63;
-    border-radius: 15px;
-    max-width: 204px;
-    height: 200px;
-    text-align: center;
-    padding: 10px;
-    box-shadow: 10px 10px 20px  #e92e63;
+.btn1 img {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    left: 65%;
 }
-.plan-icon{
-    width: 80px;
-    height: 40px;
-    position: relative;
-    left: 27%;
-}
-.plan-title{
-    font-weight: bold;
-    font-size: 20px;
-    padding-top: 50px;
-}
-.plan-disc{
-    font-size: 15px;
-    color: #fff;
-    padding-top: 10px;
-}
-/*     fin div 4      */
-
-
-
-
-/*      div 5    */
-.contact{
-    height: 90vh;
-    background-color: #000000;
-    padding: 10px;
-    text-align: center;
-}
-.container{
-    max-width: 800px;
-    margin: 0 auto;
-}
-.container h2{
-    font-size: 36px;
-    color: #e91e63;
-    margin-bottom: 5px;
-}
-.contact-wrapper{
-    display: grid;
-    grid-gap: 30px;
-}
-.contact-form{
-    text-align: center;
-    width: 400px;
-}
-.contact-form h3{
-    font-size: 24px;
-    margin-bottom: 20px;
-    color: #ffffff;
-}
-.form-group{
-    margin-bottom: 20px;
-}
-input{
-    width: 100%;
-    padding: 12px;
-    border-radius: 8px;
-    border: none;
-    background-color: #f8f9fa;
-    color: #333;
-    border: 3px solid #e91e63;
-}
-textarea{
-    width: 100%;
-    height: 80px;
-    padding: 12px;
-    border-radius: 8px;
-    border: none;
-    background-color: #f8f9fa;
-    color: #333;
-    border: 2px solid #e91e63;
-    margin-bottom: 20px;
-}
-input:focus,
-textarea:focus{
-    outline: none;
-    box-shadow: 0 0 8px #bbb;
-}
-.contact button{
-    background-color: #e91e63;
-    border: none;
-    padding: 12px 24px;
-    color: white;
-    font-weight: bold;
-    border-radius: 15px;
-    font-size: 16 px;
+.btn2{
+    display: flex;
+    padding: 5px;
+    background-color: #2F2F2F;
     cursor: pointer;
-}
-button:hover{
-    background-color: #b3184b;
-}
-
-/*   fin div 5    */
-
-
-
-
-/*     footer      */
-section{
-    display: flex;
-    justify-content: space-between;
-    background-color: rgb(0, 0, 0);
+    color: white;
+    border: #2F2F2F;
     align-items: center;
-    padding: 20px;
 }
-section .icons{
-    align-items: center;
-    display: flex;
-    gap: 20px;
+.btn2 a{
+    color: white;
 }
-.ready{
-    color: #fff;
-    font-weight: bold;
-}
-footer{
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    position: relative;
-    bottom: 0;
-}
-footer a{
-    color: #e91e63;
-    font-weight: 400;
-}
-footer a:hover{
-    font-size: 1.2em;
-}
-/*     fin footer      */
+.txt{
+    height:70px;
 
-
-@media (max-width : 780px){
-    .parts{
-        display: none;
-    }
-    .boutton{
-        padding: 4px 7px;
-    }
+}
+@media (max-width : 767px){
     .div1{
-        height: 60vh;
-    }
-    .div111 img{
-        width: 0;
-    }
-    .div11{
-        top: 25%;
-        left: 4%;
-    }
-    .div11 img{
-        width: 240px;
-    }
-    .div2{
-        flex-direction: column;
-        height: 100%;
-    }.div22{
-        height: 70vh;
-        height: 340px;
-    }   
-    .div22 img{
-        border-radius: 54px;
-        width: 200px;
-        height: 340px;
-    }
-    .div23{
-        padding-left: 0;
-        padding-top: 10px;
-    }
-    .abt1{
-        display: flex;
-        padding-top: 30px;
-    }
-    .abt2{
-        display: none;
-        font-size: 1px;
-    }
-    .div3{
         height: 80vh;
     }
-    .div32{
-        width: 80%;
-        margin-top: 40px;
+    .divimg img {
+        width: 300px;
+        margin-top: 25%;
     }
-    .txt1{
-        font-size: 14px;
+    .divimg span {
+        font-size: 1em;
     }
-    .txt2{
-        font-size: 14px;
+    .div111 {
+        margin-top: 70px;
     }
-    .services-container{
-        flex-direction: column;
-        height: 100%;
-        padding-top: 30px;
+    .div111 .p1 {
+        font-size: 1.8em;
     }
-    section .icons{
+    .div111 .p11 {
+        font-size: 1em;
+    }
+    .p2{
+        font-size: 1.5em;
+    }
+    .p22{
+        font-size: 1.7em;
+    }
+    .div21{
+        position: absolute;
+        left: 13%;
+        top: 8%;
+    }
+    .div22{
+        position: absolute;
+        left: 10%;
+        bottom: -15px;
+    }
+    .div22 img {
+        width: 0px;
+    }
+    .div23{
+        width: 261px;
+        height: 340px;
+        box-shadow: 10px -10px #EA5148;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .div23 label{
+        font-size:0.9em;
+    }
+    .btn1{
+        width: 230px;
+    }
+    .btn1 img {
+        position: absolute;
         display: flex;
-        gap: 2px;
+        align-items: center;
+        left: 65%;
     }
-    .ready{
-        font-size: 0.8em;
+    .btn2{
+        display: flex;
+        padding: 5px;
+        background-color: #2F2F2F;
+        cursor: pointer;
+        color: white;
+        border: #2F2F2F;
+        align-items: center;
     }
-    .ready img{
-        width: 10px;
+    .btn2 a{
+        color: white;
     }
-    #sm{
-        width: 100px;
-        gap: 10px;
-        margin-right: 30px;
-    }
-    .contact-form{
-        text-align: center;
-        width: 290px;
-    }
-}
-@media (min-width : 781px) and (max-width : 1023px){
-    .div11 img{
-        width: 80%;
-    }
-    .div111{
-        bottom: 0;
-        right: 2%;
-    }
-    .div111 img{
-        width: 280px;
-    }
-    .div3{
-        height: 100vh;
-    }
-    .div31 h1{
-        padding-top: 0px;
-    }
-    .txt1{
-        padding-top: 0px;
-    }
-    .txt2{
-        padding-top: 0px;
-    }
-    .div32{
-        margin-top: 15px;
-    }
-    .disc{
-        font-size: 1.1em;
-    }
-    .contact{
-        height: 100%;
-    }
-    .services-containet{
-        height: 100%;
+    .txt{
+        height:40px;
     }
 }
 
-@media (min-width : 1600px){
-    .div111 img{
-        width: 1000px;
+
+@media (min-width : 768px) and (max-width : 1023px){
+    .div1{
+        height: 130vh;
+    }
+    .divimg img {
+        width: 690px;
+    }
+    .divimg span {
+        left: 43%;
+    }
+    .div21{
+        left: 6%;
+        top: 8%;
+    }
+    .div2{
+        height: 160vh;
+    }
+    .div22 img {
+        width: 0px;
+    }
+    .div23{
+        width: 261px;
+        height: 340px;
+        box-shadow: 10px -10px #EA5148;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .div23 label{
+        font-size:0.9em;
+    }.btn1{
+        width: 230px;
+    }
+    .txt{
+        height:40px;
+    }
+    .p2{
+        font-size: 1.4em;
+    }
+    .p22{
+        font-size: 1.6em;
     }
 }
+
+
+
+/*@media (min-width : 1024px) and (max-width : 1280px){
+
+}
+*/
+/*@media (min-width : 1281px) and (max-width : 1599px){
+}
+*/
+
+
+
+    @media (min-width : 1600px) {
+        .div1{
+            height: 100vh;
+        }
+        .divimg img {
+            width: 1400px;
+        }
+        .divimg span {
+            font-size: 4.5em;
+        }
+        .div111 .p1 {
+            font-size: 5.5em;
+        }
+        .div111 .p11 {
+            font-size: 2.5em;
+        }
+        .p2{
+            font-size: 3.5em;
+        }
+        .p22{
+            font-size: 2.7em;
+        }
+        .div22{
+            left: 5%;
+            bottom: -20px;
+        }
+        .div22 img {
+            width: 500px;
+        }
+        .div23{
+            width: 561px;
+            height: 640px;
+            box-shadow: 30px -30px #EA5148;
+        }
+        .div23 label{
+            font-size:1.9em;
+        }
+        .btn1{
+            width: 490px;
+        }
+        .btn2 a{
+            color: white;
+        }
+        .txt{
+            height:140px;
+        }
+    }
