--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ header h1 {
     height: 200px;
     text-align: center;
     padding: 10px;
-    box-shadow: 10px 10px 20px  #e92e63;
+    box-shadow: 10px 10px 20px  #ff5890;
 }
 .plan-icon{
     width: 80px;
@@ -400,11 +400,14 @@ footer a:hover{
     .div111 img{
         width: 280px;
     }
+    .div2{
+        padding-top: 70px;
+    }
     .div3{
         height: 100vh;
     }
     .div31 h1{
-        padding-top: 0px;
+        padding-top: 70px;
     }
     .txt1{
         padding-top: 0px;
@@ -423,6 +426,12 @@ footer a:hover{
     }
     .services-containet{
         height: 100%;
+    }
+    #mys{
+        padding-top: 70px;
+    }
+    .contact-form h2{
+        padding-top: 70px;
     }
 }
 
