--- a/style.css
+++ b/style.css
@@ -418,11 +418,11 @@ footer a:hover{
         width: 80%;
     }
     .span1{
-        font-size: 1em;
+        font-size: 0.5em;
         font-weight: bold;
     }
     .span2{
-        font-size: 1.5em;
+        font-size: 1em;
         color: #e91263;
     }
     .div111{
@@ -451,7 +451,8 @@ footer a:hover{
         margin-top: 15px;
     }
     .disc{
-        font-size: 1.1em;
+        font-size: 0.9em;
+        margin-top: 0px;
     }
     .contact{
         height: 100%;
