--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body,html{
     overflow-x: hidden;
     background-color: black;
+    scroll-behavior: smooth;
 }
 header{
     width: 100%;
@@ -66,8 +67,11 @@ header h1 {
 .div11{
     color: white;
     position: absolute;
-    left: 10%;
-    top: 30%;
+    left: 8%;
+    top: 20%;
+}
+.div11 img{
+    width: 65%;
 }
 .disc{
     font-size: 1.4em;
@@ -86,6 +90,24 @@ header h1 {
     right: -10%;
     transform: translateX(5%);
 }
+.div14{
+    position: absolute;
+    bottom: 8%;
+    left: 9%;
+    transform: translate(-10%,-10%);
+}
+.div144{
+    color: #a7a7a7;
+    font-size: 24px;
+}
+.div15{
+    display: flex;
+    gap: 15px;
+    padding-top: 10px;
+}
+.div15 img:hover{
+    transform: scale(1.1);
+}
 
 /*     fin div 1      */
 
@@ -97,7 +119,7 @@ header h1 {
     height: 110vh;
     display: flex;
     justify-content: space-between;
-    padding: 30px;
+    padding: 100px;
     padding-top: 100px;
     overflow: hidden;
 }
@@ -199,6 +221,9 @@ header h1 {
 .services-paln:hover{
     opacity: 0.8;
     transform: scale(1.1);
+}
+#mys{
+    padding-top: 70px;
 }
 /*     fin div 4      */
 
@@ -329,21 +354,27 @@ footer a:hover{
         padding: 4px 7px;
     }
     .div1{
-        height: 60vh;
+        height: 90vh;
     }
     .div111 img{
         width: 0;
     }
     .div11{
-        top: 25%;
+        top: 20%;
         left: 4%;
     }
     .div11 img{
         width: 240px;
     }
+    .div14{
+        bottom: 0%;
+        left: 4%;
+        transform: translate(0%,0%);
+    }
     .div2{
         flex-direction: column;
         height: 100%;
+        padding: 30px;
     }.div22{
         height: 70vh;
         height: 340px;
@@ -416,12 +447,16 @@ footer a:hover{
     .div11 img{
         width: 80%;
     }
+    .disc{
+        font-size: 0.9em;
+        margin-top: 0px;
+    }
     .span1{
-        font-size: 0.5em;
+        font-size: 1.2em;
         font-weight: bold;
     }
     .span2{
-        font-size: 1em;
+        font-size: 1.6em;
         color: #e91263;
     }
     .div111{
@@ -430,6 +465,10 @@ footer a:hover{
     }
     .div111 img{
         width: 340px;
+    }
+    .div14{
+        left: 10%;
+        transform: translate(-10%,-10%);
     }
     .div2{
         padding-top: 70px;
@@ -449,10 +488,6 @@ footer a:hover{
     .div32{
         margin-top: 15px;
     }
-    .disc{
-        font-size: 0.9em;
-        margin-top: 0px;
-    }
     .contact{
         height: 100%;
     }
@@ -470,6 +505,16 @@ footer a:hover{
 @media (min-width : 1600px){
     .div111 img{
         width: 1000px;
+    }
+    .div144{
+        font-size: 34px;
+        padding-left: 10px;
+    }
+    .div15 img{
+        width: 80px;
+    }
+    .div15{
+        gap: 20px;
     }
     .parts{
         gap: 100px;
