adjusted skills bar and the red line

--- a/style.css
+++ b/style.css
@@ -364,10 +364,10 @@ footer a:hover{
         left: 4%;
     }
     .div11 img{
-        width: 240px;
+        width: 85%;
     }
     .div14{
-        bottom: 0%;
+        bottom: -3%;
         left: 4%;
         transform: translate(0%,0%);
     }
