--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body,html{
     scroll-behavior: smooth;
 }
 header{
-    width: 90%;
+    width: 100%;
     height: 60px;
     display: flex;
     background-color: #fff;
@@ -20,9 +20,7 @@ header{
     align-items: center;
     padding: 30px 30px;
     border-bottom: 5px solid #e91e63;
-    border-radius: 50px;
     position: fixed;
-    transform: translateX(5%);
 }
 header h1 {
     color: black;
@@ -86,6 +84,7 @@ header h1 {
 .span2{
     font-size: 3em;
     color: #e91263;
+    font-weight: bold;
 }
 .div111{
     position: absolute;
@@ -320,6 +319,8 @@ section .icons{
     align-items: center;
     display: flex;
     gap: 20px;
+    padding: 5px 20px;
+    border-radius: 10px;
 }
 .icons img:hover{
     transform: scale(1.2);
@@ -349,10 +350,6 @@ footer a:hover{
 
 
 @media (max-width : 765px){
-    header{
-        width: 96%;
-        transform: translateX(2%);
-    }
     .parts{
         display: none;
     }
@@ -444,9 +441,6 @@ footer a:hover{
     }
 }
 @media (min-width : 766px) and (max-width : 1023px){
-    header{
-        padding: 30px 10px;
-    }
     .parts {
         gap: 15px;
     }
